--- a/calendario-consultas.html
+++ b/calendario-consultas.html
@@ -27,50 +27,73 @@
         }
         .form-group {
             margin-bottom: 15px;
+            display: flex;
+            align-items: center;
         }
         .form-group label {
             display: block;
             margin-bottom: 5px;
+            margin-right: 10px;
         }
+        .form-group input,
         .form-group select {
-            width: 100%;
+            flex: 1;
             padding: 10px;
+            box-sizing: border-box;
         }
         .btn {
-            width: 100%;
             padding: 10px;
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
+            margin-top: 10px;
         }
         .btn:hover {
             background-color: #45a049;
         }
-        .subespecialidades-list {
+        .calendar-week {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 5px;
             margin-top: 20px;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
+        .day {
+            border: 1px solid #ddd;
+            padding: 10px;
+            min-height: 100px;
         }
-        table, th, td {
+        .day-header {
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+        .day-content {
+            min-height: 50px;
+        }
+        .consulta {
+            background-color: #4CAF50;
+            color: white;
+            padding: 5px;
+            margin: 5px;
+            cursor: move;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .consultas-disponibles {
+            margin-top: 20px;
+            padding: 10px;
             border: 1px solid #ddd;
         }
-        th, td {
-            padding: 10px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .delete-btn {
-            background-color: red;
+        .papelera {
+            width: 100%;
+            height: 50px;
+            background-color: #ff6b6b;
             color: white;
-            border: none;
-            padding: 5px 10px;
-            cursor: pointer;
+            text-align: center;
+            line-height: 50px;
+            margin-top: 20px;
         }
         nav {
             margin-top: 20px;
@@ -80,19 +103,47 @@
             text-decoration: none;
             color: #4CAF50;
         }
-        .nueva-subespecialidad {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #ddd;
-            background-color: #f9f9f9;
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
         }
-        .nueva-subespecialidad input {
-            width: calc(100% - 110px);
-            padding: 5px;
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-width: 500px;
         }
-        .nueva-subespecialidad button {
-            width: 100px;
-            padding: 5px;
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
+        .holiday {
+            background-color: #ffcccb;
+        }
+        .eliminar-consulta {
+            background-color: #ff6b6b;
+            color: white;
+            border: none;
+            padding: 2px 5px;
+            cursor: pointer;
             margin-left: 5px;
         }
     </style>
@@ -455,7 +506,6 @@
 
         window.onload = function() {
             generarOpcionesHoras();
-            cargarSubespecialidades();
             const currentDate = new Date();
             const currentWeek = getWeekNumber(currentDate);
             semanaInput.value = `${currentDate.getFullYear()}-W${currentWeek.toString().padStart(2, '0')}`;
