--- a/generar-planning.html
+++ b/generar-planning.html
@@ -180,6 +180,22 @@
             consultasCreadas = JSON.parse(localStorage.getItem('consultas')) || [];
             turnosCreados = JSON.parse(localStorage.getItem('turnosCreados')) || [];
             
+            // Filtrar consultas y turnos para la semana seleccionada
+            const [year, week] = semanaSeleccionada.split('-W');
+            const primerDia = getDateOfISOWeek(parseInt(week), parseInt(year));
+            const ultimoDia = new Date(primerDia);
+            ultimoDia.setDate(ultimoDia.getDate() + 6);
+
+            consultasCreadas = consultasCreadas.filter(consulta => {
+                const fechaConsulta = new Date(consulta.fecha);
+                return fechaConsulta >= primerDia && fechaConsulta <= ultimoDia;
+            });
+
+            turnosCreados = turnosCreados.filter(turno => {
+                const fechaTurno = new Date(turno.fecha);
+                return fechaTurno >= primerDia && fechaTurno <= ultimoDia;
+            });
+
             consultasAsignadas = JSON.parse(localStorage.getItem(`consultasAsignadas_${semanaSeleccionada}`)) || {};
             turnosAsignados = JSON.parse(localStorage.getItem(`turnosAsignados_${semanaSeleccionada}`)) || {};
         }
@@ -192,6 +208,10 @@
             }
 
             cargarDatos();
+
+            // Reiniciar asignaciones
+            consultasAsignadas = {};
+            turnosAsignados = {};
 
             const [year, week] = semanaSeleccionada.split('-W');
             const primerDia = getDateOfISOWeek(parseInt(week), parseInt(year));
