--- a/generar-planning.html
+++ b/generar-planning.html
@@ -180,22 +180,6 @@
             consultasCreadas = JSON.parse(localStorage.getItem('consultas')) || [];
             turnosCreados = JSON.parse(localStorage.getItem('turnosCreados')) || [];
             
-            // Filtrar consultas y turnos para la semana seleccionada
-            const [year, week] = semanaSeleccionada.split('-W');
-            const primerDia = getDateOfISOWeek(parseInt(week), parseInt(year));
-            const ultimoDia = new Date(primerDia);
-            ultimoDia.setDate(ultimoDia.getDate() + 6);
-
-            consultasCreadas = consultasCreadas.filter(consulta => {
-                const fechaConsulta = new Date(consulta.fecha);
-                return fechaConsulta >= primerDia && fechaConsulta <= ultimoDia;
-            });
-
-            turnosCreados = turnosCreados.filter(turno => {
-                const fechaTurno = new Date(turno.fecha);
-                return fechaTurno >= primerDia && fechaTurno <= ultimoDia;
-            });
-
             consultasAsignadas = JSON.parse(localStorage.getItem(`consultasAsignadas_${semanaSeleccionada}`)) || {};
             turnosAsignados = JSON.parse(localStorage.getItem(`turnosAsignados_${semanaSeleccionada}`)) || {};
         }
@@ -221,9 +205,12 @@
             for (let fecha = new Date(Math.max(primerDia, hoy)); fecha <= ultimoDiaMes; fecha.setDate(fecha.getDate() + 1)) {
                 const fechaStr = fecha.toISOString().split('T')[0];
                 const esDiaFestivo = esFestivo(fechaStr);
-                const asignacionesDelDia = asignarConsultasYTurnos(fechaStr, esDiaFestivo);
-                if (asignacionesDelDia === 0 && !tieneTurnosAsignados(fechaStr)) {
-                    diasSinAsignacion.push(fechaStr);
+                
+                if (!tieneTurnosAsignados(fechaStr) && !esDiaFestivo) {
+                    const asignacionesDelDia = asignarConsultasYTurnos(fechaStr, esDiaFestivo);
+                    if (asignacionesDelDia === 0) {
+                        diasSinAsignacion.push(fechaStr);
+                    }
                 }
             }
 
